hw35